# ekko

./: .ekkoignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ekko-cli.sh  ekko-config-wizard.sh  ekko-doctor.sh  ekko-genesis.sh  ekko-ultimate-install.sh  pyproject.toml  run_ekko_tui.sh  wget-log
.ekko/: master.key
.ekko/core_team/: stark.yaml
.github/workflows/: ci.yaml  quantum_ci.yml
config_examples/: .env.example
src/cli/: main.py
src/ekko/: config.py  main.py
src/ekko/api/: main.py
src/ekko/cli/: main.py
src/ekko/tui/: main.py
test/chaos/: injector.py
tests/chaos/: injector.py
